kubernetes/3_schema-registry/33_schema-registry-statefulset.yml
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: sr
  labels:
    category: schema-registry
spec: 
  serviceName: sr-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: sr
    spec: 
      containers:
      - name: schema-registry
        imagePullPolicy: Always
        image: mbe1224/confluent-schema-registry
        resources:
          requests:
            memory: "1Gi"
            cpu: 500m        
        ports:
        - containerPort: 8081
          name: server
        readinessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 10        
          timeoutSeconds: 1
        livenessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 10        
          timeoutSeconds: 1
