kubernetes/3_schema-registry/schema-registry-deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sr
  namespace: confluent-platform  
  labels:
    category: schema-registry
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sr
    spec: 
      terminationGracePeriodSeconds: 300
      containers:
      - name: confluent-schema-registry
        imagePullPolicy: Always
        image: mbe1224/confluent-schema-registry
        resources:
          requests:
            memory: "1Gi"
            cpu: 500m
        ports:
        - containerPort: 8081
          name: server
