kubernetes/3_schema-registry/schema-registry-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sr-svc
  namespace: confluent-platform
  labels:
    app: sr-svc
    category: schema-registry
spec:
  ports:
  - name: server
    protocol: TCP  
    port: 8081
  selector:
    app: sr
